základ pre responzivitu pre tlač

--- a/JumpingUp/src/data/settings.json
+++ b/JumpingUp/src/data/settings.json
@@ -20,9 +20,8 @@
       "Zbieraj zlaté kľúče na odomknutie dverí"
     ],
     "tips": [
-      "Každý level je ťažší ako predchádzajúci",
-      "Zober modrý orb - uvidíš presný smer a dĺžku svojho skoku!",
-      "Zlaté kľúče odomykajú dvere - určite sa oplatí ich zobrať"
+      "Zober modrý orb ak je na mape - uvidíš presný smer a dĺžku svojho skoku!",
+      "Zlaté kľúče odomykajú dvere - bez nich nedokončíš level!"
     ]
   }
 }
