--- a/JumpingUp/src/data/settings.json
+++ b/JumpingUp/src/data/settings.json
@@ -27,7 +27,8 @@
     "tips": [
       "Zober modrý orb ak je na mape - uvidíš presný smer a dopad svojho skoku!",
       "Zlaté kľúče odomykajú dvere - bez nich nedokončíš level!",
-      "Ak hráte na telefóne, otočte ho na šírku (landscape režim) pre lepší herný zážitok"
+      "Oranžové trofeje môžeš zbierať len ak si ešte nezobral modrý orb trajektórie - ak zoberieš orb, trofej zmizne!",
+      "Ak hráte na telefóne, otočte ho na šírku (landscape režim) pre lepší herný zážitok!"
     ]
   }
 }
